# mordencpptutorial

./: .gitignore  CMakeLists.txt
data/: down_lines.ascii.pgm  empty.ascii.pgm  lines.ascii.pgm  up_lines.ascii.pgm
src/igg_image/: CMakeLists.txt  image.cpp  image.h  io_tools.h  tools_demo.cpp
tests/: CMakeLists.txt  image_test.cpp
